--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=Poppins:wght@900&family=Roboto:wght@100&display=swap');
+
+:root {
+  --bg-color: #ff2121;
+  /* --bg-color: rgb(42, 0, 139); */
+  --green: rgb(34, 219, 9);
+  --dark-color: rgb(26, 24, 24);
+  --gray: rgba(17, 15, 15, 0.637);
+  --pink: rgb(255, 2, 99);
+  --dark-pink: rgb(201, 4, 53);
+  --yellow: rgb(238, 238, 5);
+  --display: flex;
+  --navAnimation: navigationAnimation;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.root{
+  position: relative;
+}
+
+* {
+  font-family: Poppins, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@keyframes navigationAnimation {
+  from {
+    width: 0vw;
+  }
+
+  to {
+    width: 25vw;
+  }
+}
+
+@keyframes closeSidebar {
+  0% {
+    width: 25vw;
+  }
+
+  50% {
+    width: 0vw;
+  }
+  100% {
+    display: none;
+  }
+}
+
+@keyframes pokeballAnimation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
