--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,13 @@
   box-sizing: border-box;
 }
 
-
-body{
-  position: relative;
-  /* display: flex; */
-  /* flex-direction: column; */
-  min-height: 100vh;
+.category-card{
+  padding-top: 10px;
+  transition: .3s ease-in-out;
+  border: none;
 }
 
-footer {
-  width: 100%;
-  position: absolute;
-  bottom: 0%;
+.category-card:hover{
+  background-color: rgb(54, 59, 54);
+  color: white;
 }
